[package]
name = "redis-exporter"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false

[dependencies]
anyhow = "1.0.93"
axum = "0.8.0-alpha.1"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4.22"
prometheus = "0.13.4"
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_yml = "0.0.12"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
